--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Chebyshev", "infty", "mathbf", "Minkowski"]
+  "cSpell.words": ["Chebyshev", "DAMIANI", "infty", "mathbf", "Minkowski"]
 }
