add word to workspace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["Chebyshev", "DAMIANI", "infty", "mathbf", "Minkowski"]
+  "cSpell.words": [
+    "Chebyshev",
+    "DAMIANI",
+    "figsize",
+    "infty",
+    "mathbf",
+    "Minkowski"
+  ]
 }
